FRONTEND: Fixed the alignment of icons on comment page

--- a/backend/api/core/static/style.css
+++ b/backend/api/core/static/style.css
@@ -840,6 +840,13 @@ img {
   padding-bottom:10px;
 }
 
+.icons-list-2{
+  color: #00001c;
+  display: grid;  
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;  
+  padding-bottom:10px;
+}
+
 .feed{
   margin-left:18%;
 }
